--- a/package.json
+++ b/package.json
@@ -1,46 +1,53 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon ./src/index.ts",
-    "start": "node ./dist/index.js",
-    "build-ts": "tsc --project ./"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/body-parser": "^1.19.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cookie-session": "^2.0.41",
-    "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.8",
-    "@types/express-session": "^1.17.0",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/node": "^14.11.1",
-    "@types/passport": "^1.0.4",
-    "@types/passport-steam": "^1.0.1",
-    "@types/uuid": "^8.3.0",
-    "express-session": "^1.17.1",
-    "nodemon": "^2.0.4",
-    "ts-node": "^9.0.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.0.3"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "connect-pg-simple": "^6.2.1",
-    "cookie-parser": "^1.4.5",
-    "cookie-session": "^1.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "passport": "^0.4.1",
-    "passport-steam": "^1.0.14",
-    "pg": "^8.3.3",
-    "typeorm": "^0.2.26",
-    "uuid": "^8.3.0"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "nodemon ./src/index.ts",
+		"start": "node ./dist/index.js",
+		"build-ts": "tsc --project ./"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/body-parser": "^1.19.0",
+		"@types/cookie-parser": "^1.4.2",
+		"@types/cookie-session": "^2.0.41",
+		"@types/cors": "^2.8.7",
+		"@types/express": "^4.17.8",
+		"@types/express-session": "^1.17.0",
+		"@types/jsonwebtoken": "^8.5.0",
+		"@types/node": "^14.11.1",
+		"@types/passport": "^1.0.4",
+		"@types/passport-steam": "^1.0.1",
+		"@types/uuid": "^8.3.0",
+		"@typescript-eslint/eslint-plugin": "^4.9.0",
+		"@typescript-eslint/parser": "^4.9.0",
+		"eslint": "^7.14.0",
+		"eslint-config-airbnb-base": "^14.2.1",
+		"eslint-plugin-import": "^2.22.1",
+		"express-session": "^1.17.1",
+		"nodemon": "^2.0.4",
+		"prettier": "^2.2.1",
+		"prettier-airbnb-config": "^1.0.0",
+		"ts-node": "^9.0.0",
+		"tslint": "^6.1.3",
+		"typescript": "^4.0.3"
+	},
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"connect-pg-simple": "^6.2.1",
+		"cookie-parser": "^1.4.5",
+		"cookie-session": "^1.4.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
+		"passport": "^0.4.1",
+		"passport-steam": "^1.0.14",
+		"pg": "^8.3.3",
+		"typeorm": "^0.2.26",
+		"uuid": "^8.3.0"
+	}
 }
